[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PartyCreator.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Search.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/pkm.gd" type="Script" id=5]
[ext_resource path="res://animations/Waiting.tres" type="Animation" id=6]
[ext_resource path="res://fonts/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/icons/icon.png" type="Texture" id=8]
[ext_resource path="res://abomasnow-mega.png" type="Texture" id=9]
[ext_resource path="res://scripts/RightClickMenu.gd" type="Script" id=10]
[ext_resource path="res://scripts/RenamePanel.gd" type="Script" id=11]
[ext_resource path="res://scripts/Bank_Layout.gd" type="Script" id=12]
[ext_resource path="res://scripts/ProfileInfo.gd" type="Script" id=13]
[ext_resource path="res://scripts/ProfileMaker.gd" type="Script" id=14]
[ext_resource path="res://scripts/bank_manager.gd" type="Script" id=15]
[ext_resource path="res://sprites/ui/box.png" type="Texture" id=16]
[ext_resource path="res://sprites/ui/Folder_Icon.png" type="Texture" id=17]
[ext_resource path="res://sprites/ui/box_top.png" type="Texture" id=18]
[ext_resource path="res://scenes/Trading.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/Login.tscn" type="PackedScene" id=20]
[ext_resource path="res://sprites/icons/Poké_Ball_icon.svg.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 7 )

[sub_resource type="GDScript" id=7]
script/source = "extends Panel


var text = {
	\"api\":\"Fetching info from the web...\",
	\"reading\":\"Reading bank file...\",
	\"layout\":\"Organizing the bank...\",
	\"welcome\":\"Welcome to Pokémon Manager!\"
}

func _ready():
	visible = true
	OS.window_resizable = false

func switch(x):
	$Label.text = text[x]

func finised():
	$Label.text = text[\"welcome\"]
	$ProgressBar.visible = false
	$Control/AnimationPlayer.play(\"Finished\")
	yield($Control/AnimationPlayer,\"animation_finished\")
	$WalkingPokemon.visible = false
	$Control/AnimationPlayer.play(\"FinishedClose\")
	yield($Control/AnimationPlayer,\"animation_finished\")
	visible = false
#	if Trainer.first_time_setup:
#		$\"../Login\".popup()
	OS.window_resizable = true
"

[sub_resource type="GDScript" id=9]
script/source = "extends Sprite


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
const folder_path = \"res://sprites/pokemon/icons/\"
var last_animation : int = 0
# Called when the node enters the scene tree for the first time.
func _ready():
	rand_animation()
	var sprites = list_files_in_directory(folder_path)
	var path = \"\"
	while true:
		var rng = RandomNumberGenerator.new()
		rng.randomize()
		var rand = rng.randi_range(0,sprites.size())
		print(rand)
		path = sprites[rand]
		if path.get_extension() == \"png\":
			break
		else:
			continue
	print(path)
	set_texture(load(folder_path+path))

func rand_animation():
	var rng = RandomNumberGenerator.new()
	while true:
		rng.randomize()
		var rand = rng.randi_range(0,$AnimationPlayer.get_animation_list().size()-1)
		print(rand)
		if last_animation == rand or $AnimationPlayer.get_animation_list()[rand] == \"RESET\":
			print(\"Try again\")
			continue
		else:
			last_animation = rand
			$AnimationPlayer.play($AnimationPlayer.get_animation_list()[rand])
			break



func list_files_in_directory(path): 
	var files = []
	var dir = Directory.new()
	dir.open(path)
	dir.list_dir_begin()

	while true:
		var file = dir.get_next()
		if file == \"\":
			break
		elif not file.begins_with(\".\"):
			files.append(file)
	dir.list_dir_end()
	return files


func _on_AnimationPlayer_animation_finished(anim_name):
	rand_animation()
"

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 256 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Roll"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 269 ), Vector2( 408, 269 ), Vector2( 646, 269 ), Vector2( 512, 269 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.2, 1.21, 1.4, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1e-05, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 360.0, 0.0, 0.0, 45.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Wrap Around"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.1, 3, 4.3, 5, 5.1, 5.7, 5.9, 6.1, 6.7, 7.5 ),
"transitions": PoolRealArray( 1, 1e-05, 1, 1, 1, 1e-05, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 256 ), Vector2( -75, 256 ), Vector2( 1074, 256 ), Vector2( 999, 256 ), Vector2( 999, 256 ), Vector2( 1074, 256 ), Vector2( 410, -50 ), Vector2( 410, 256 ), Vector2( 410, 276 ), Vector2( 410, 256 ), Vector2( 410, 256 ), Vector2( 512, 256 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5, 3.7, 3.9, 4.1, 4.3, 5, 6.1, 6.3, 6.5, 6.7, 7.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, false, true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 5.7, 5.9, 6.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 0.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Finished"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Folder2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 704, 384 ), Vector2( 320, 384 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Folder2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Folder:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Folder:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Folder2/Top:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "FinishedClose"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Folder2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 384 ), Vector2( 512, 384 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Folder2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Folder:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Folder:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Folder2/Top:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Folder2/Top:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Folder2/Top:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Folder2/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1160 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/side_margin = 40
custom_fonts/font = SubResource( 11 )
tab_align = 0
script = ExtResource( 12 )

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_left = 8.0
margin_top = 38.0
margin_right = 144.0
margin_bottom = 216.0
script = ExtResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TextureRect" type="TextureRect" parent="PopupPanel/VBoxContainer"]
margin_right = 128.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 92.0
margin_right = 128.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Name"
align = 1
valign = 1

[node name="Showdown" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 126.0
margin_right = 128.0
margin_bottom = 146.0
text = "Open Showdown!"

[node name="Main Menu" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 150.0
margin_right = 128.0
margin_bottom = 170.0
text = "Main Menu"

[node name="ProfilePic" type="Button" parent="."]
margin_left = 8.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 38.0

[node name="Pic" type="TextureRect" parent="ProfilePic"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -17.5
margin_right = 17.5
margin_bottom = 17.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Bank Manager" type="Node" parent="."]
script = ExtResource( 15 )

[node name="Loading Screen" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 4
size_flags_horizontal = 3
size_flags_vertical = 3
script = SubResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Loading Screen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 191.0
margin_top = -7.0
margin_right = -191.0
margin_bottom = 7.0
step = 1.0

[node name="Label" type="Label" parent="Loading Screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -126.0
margin_right = 272.0
margin_bottom = -54.0
text = "Please Wait..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkingPokemon" type="Control" parent="Loading Screen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="Loading Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 52224.0
margin_bottom = 30600.0

[node name="Sprite" type="Sprite" parent="Loading Screen/Control"]
position = Vector2( 512, 256 )
texture = ExtResource( 9 )
script = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loading Screen/Control/Sprite"]
anims/Jumping = ExtResource( 6 )
anims/RESET = SubResource( 10 )
anims/Roll = SubResource( 15 )
"anims/Wrap Around" = SubResource( 16 )

[node name="Folder2" type="Sprite" parent="Loading Screen/Control"]
light_mask = 2
position = Vector2( 704, 384 )
rotation = -1.5708
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 16 )

[node name="Polygon2D" type="Polygon2D" parent="Loading Screen/Control/Folder2"]
position = Vector2( 8706.09, -13898.4 )
rotation = 1.5708
scale = Vector2( 19.8649, 22.6087 )
color = Color( 0.145098, 0.145098, 0.164706, 1 )
polygon = PoolVector2Array( 752, 332, 1344, 332, 1344, 424, 752, 424 )

[node name="Top" type="Sprite" parent="Loading Screen/Control/Folder2"]
visible = false
modulate = Color( 1, 1, 1, 0.333333 )
position = Vector2( 0, -1160 )
texture = ExtResource( 18 )

[node name="Folder" type="Sprite" parent="Loading Screen/Control"]
light_mask = 2
position = Vector2( 320, 392 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loading Screen/Control"]
anims/Finished = SubResource( 12 )
anims/FinishedClose = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 88.0
margin_bottom = 128.0
items = [ "Box", null, 0, false, true, -1, 0, null, "", true, "Add a new box", null, 0, false, false, 0, 0, null, "", false, "Remove this box", null, 0, false, true, 5, 0, null, "", false, "Rename box", null, 0, false, false, 1, 0, null, "", false, "Copy box to clipboard", null, 0, false, false, 4, 0, null, "", false, "Pokémon", null, 0, false, true, -1, 0, null, "", true, "Search for Pokémon", null, 0, false, false, 2, 0, null, "", false, "Manage parties", null, 0, false, false, 3, 0, null, "", false, "Trade with someone else", null, 0, false, false, 6, 0, null, "", false ]
script = ExtResource( 10 )

[node name="Rename" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -140.0
margin_right = 256.0
margin_bottom = 140.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Rename"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -52.0
margin_right = 256.0
margin_bottom = -38.0
text = "Enter in new name"
align = 1
valign = 1

[node name="Name" type="LineEdit" parent="Rename"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -12.0
margin_right = 192.0
margin_bottom = 12.0
align = 1
placeholder_text = "Box"

[node name="Search" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Login" parent="." instance=ExtResource( 20 )]

[node name="ProfileMaker" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -178.0
margin_right = 312.0
margin_bottom = 224.0
popup_exclusive = true
window_title = "Setup"
script = ExtResource( 14 )

[node name="Welcome" type="Label" parent="ProfileMaker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -172.0
margin_right = 240.0
margin_bottom = -126.0
text = "Welcome to Pokemon Manager!"
align = 1
valign = 1

[node name="ProfilePic" type="Button" parent="ProfileMaker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -75.0
margin_right = 64.0
margin_bottom = 53.0
rect_min_size = Vector2( 128, 128 )

[node name="Pic" type="TextureRect" parent="ProfileMaker/ProfilePic"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 21 )
expand = true
stretch_mode = 7

[node name="Button" type="Button" parent="ProfileMaker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = 165.0
margin_right = 39.0
margin_bottom = 185.0
text = "Ok"

[node name="Warning" type="Label" parent="ProfileMaker"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -213.5
margin_top = 124.0
margin_right = 213.5
margin_bottom = 138.0
custom_colors/font_color = Color( 1, 0.247059, 0.247059, 1 )
text = "Please insert a name"
align = 1
valign = 1
autowrap = true

[node name="Name" type="LineEdit" parent="ProfileMaker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 72.0
margin_right = 100.0
margin_bottom = 96.0
rect_min_size = Vector2( 200, 0 )
align = 1
placeholder_text = "Name"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -364.0
margin_top = -260.0
margin_right = 364.0
margin_bottom = 260.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG Images" )
show_hidden_files = true

[node name="PartyCreator" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Panel" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Trade" parent="." instance=ExtResource( 19 )]
visible = false

[node name="Menu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Copied" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -16.0
margin_right = 200.0
margin_bottom = 42.0
window_title = "Successfully copied pokemon to clipboard!"

[node name="PathSelector" type="FileDialog" parent="."]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 68.0
margin_right = -128.0
margin_bottom = -68.0
window_title = "Select the pkmdb folder"
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true

[connection signal="pressed" from="PopupPanel/VBoxContainer/Showdown" to="PopupPanel" method="_on_Showdown_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Main Menu" to="PopupPanel" method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Main Menu" to="Menu" method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="ProfilePic" to="PopupPanel" method="_on_ProfilePic_pressed"]
[connection signal="animation_finished" from="Loading Screen/Control/Sprite/AnimationPlayer" to="Loading Screen/Control/Sprite" method="_on_AnimationPlayer_animation_finished"]
[connection signal="about_to_show" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_about_to_show"]
[connection signal="export_box" from="PopupMenu" to="TabContainer" method="_on_PopupMenu_export_box"]
[connection signal="id_pressed" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_id_pressed"]
[connection signal="new_box" from="PopupMenu" to="TabContainer" method="_on_PopupMenu_new_box"]
[connection signal="newName" from="Rename" to="TabContainer" method="_on_Rename_newName"]
[connection signal="text_entered" from="Rename/Name" to="Rename" method="_on_Name_text_entered"]
[connection signal="pressed" from="ProfileMaker/ProfilePic" to="ProfileMaker" method="_on_ProfilePic_pressed"]
[connection signal="pressed" from="ProfileMaker/Button" to="ProfileMaker" method="_on_Button_pressed"]
[connection signal="file_selected" from="FileDialog" to="ProfileMaker" method="_on_FileDialog_file_selected"]
